--- a/src/main/resources/com/example/autoluxe/vista_empleadosyroles.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_empleadosyroles.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -211,28 +212,34 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <TextField layoutX="457.0" layoutY="203.0" prefHeight="30.0" prefWidth="280.0" />
-                              <TableView layoutX="921.0" layoutY="243.0" prefHeight="215.0" prefWidth="662.0">
+                              <TextField fx:id="edApellidosA" layoutX="457.0" layoutY="203.0" prefHeight="30.0" prefWidth="280.0" />
+                              <TableView fx:id="vistaEmpleadosA" layoutX="921.0" layoutY="243.0" prefHeight="215.0" prefWidth="662.0">
                                  <columns>
-                                    <TableColumn prefWidth="214.0" text="A" />
-                                    <TableColumn minWidth="0.0" prefWidth="236.0" text="B" />
-                                    <TableColumn prefWidth="210.0" text="C" />
+                                    <TableColumn fx:id="colDNIEmpleadoA" prefWidth="110.0" text="DNI" />
+                                    <TableColumn fx:id="colNombreEmpleadoA" minWidth="0.0" prefWidth="110.0" text="Nombre" />
+                                    <TableColumn fx:id="colApellidosEmpleadoA" prefWidth="110.0" text="Apellidos" />
+                                    <TableColumn fx:id="colRolEmpleadoA" prefWidth="110.0" text="Rol" />
+                                    <TableColumn fx:id="colCorreoEmpleadoA" prefWidth="112.66650390625" text="Correo" />
+                                    <TableColumn fx:id="colTelefonoEmpleadoA" prefWidth="108.0" text="Teléfono" />
                                  </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
                               </TableView>
-                              <TextField layoutX="136.0" layoutY="287.0" prefHeight="30.0" prefWidth="280.0" />
-                              <TextField layoutX="136.0" layoutY="203.0" prefHeight="30.0" prefWidth="280.0" />
+                              <TextField fx:id="edDNIA" layoutX="136.0" layoutY="287.0" prefHeight="30.0" prefWidth="280.0" promptText="dni (9 caracteres)" />
+                              <TextField fx:id="edNombreA" layoutX="136.0" layoutY="203.0" prefHeight="30.0" prefWidth="280.0" />
                               <Label alignment="CENTER" layoutX="191.0" layoutY="54.0" prefHeight="72.0" prefWidth="492.0" text="AÑADIR EMPLEADO" textAlignment="CENTER">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="48.0" />
                                  </font>
                               </Label>
-                              <Button fx:id="acAnadir" layoutX="137.0" layoutY="625.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="600.0" text="AÑADIR">
+                              <Button fx:id="acAnadir" layoutX="137.0" layoutY="625.0" mnemonicParsing="false" onAction="#introducirEmpleadoBD" prefHeight="44.0" prefWidth="600.0" text="AÑADIR">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                  </font>
                               </Button>
-                              <ChoiceBox layoutX="1404.0" layoutY="197.0" prefHeight="30.0" prefWidth="179.0" />
-                              <TextField layoutX="921.0" layoutY="197.0" prefHeight="31.0" prefWidth="285.0" />
+                              <ChoiceBox fx:id="cbBusquedaEmpleadosA" layoutX="1404.0" layoutY="197.0" prefHeight="30.0" prefWidth="179.0" />
+                              <TextField fx:id="edBuscar" layoutX="921.0" layoutY="197.0" prefHeight="31.0" prefWidth="285.0" />
                               <Button fx:id="btnBuscar" layoutX="1206.0" layoutY="197.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #000000;">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
@@ -257,7 +264,7 @@
                                  </font>
                               </Label>
                               <Line endX="559.0" layoutX="1022.0" layoutY="529.0" startX="-100.0" />
-                              <TableView layoutX="921.0" layoutY="554.0" prefHeight="115.0" prefWidth="662.0">
+                              <TableView fx:id="vistaEmpleadoAnadido" layoutX="921.0" layoutY="554.0" prefHeight="115.0" prefWidth="662.0">
                                  <columns>
                                     <TableColumn prefWidth="214.0" text="A" />
                                     <TableColumn minWidth="0.0" prefWidth="236.0" text="B" />
@@ -269,8 +276,8 @@
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="457.0" layoutY="286.0" prefHeight="30.0" prefWidth="280.0" />
-                              <ChoiceBox layoutX="136.0" layoutY="369.0" prefHeight="30.0" prefWidth="179.0" />
+                              <TextField fx:id="edTlfnoA" layoutX="457.0" layoutY="286.0" prefHeight="30.0" prefWidth="280.0" promptText="máximo 12 caracteres" />
+                              <ChoiceBox fx:id="choiceBoxA" layoutX="136.0" layoutY="369.0" prefHeight="30.0" prefWidth="179.0" />
                               <Label layoutX="138.0" layoutY="336.0" text="Rol:">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
@@ -286,8 +293,8 @@
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="136.0" layoutY="531.0" prefHeight="30.0" prefWidth="600.0" />
-                              <TextField layoutX="136.0" layoutY="447.0" prefHeight="30.0" prefWidth="600.0" />
+                              <PasswordField fx:id="edContrasenaA" layoutX="136.0" layoutY="531.0" prefHeight="30.0" prefWidth="600.0" promptText="·········" />
+                              <TextField fx:id="edCorreoA" layoutX="136.0" layoutY="447.0" prefHeight="30.0" prefWidth="600.0" promptText="example@autoluxe.com" />
                            </children>
                         </Pane>
                         <Pane fx:id="panelCuerpo1" prefHeight="880.0" prefWidth="1620.0" stylesheets="@../../../style/estilo_app.css" visible="false">
