--- a/src/main/resources/com/example/autoluxe/vista_empleadosyroles.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_empleadosyroles.fxml
@@ -240,7 +240,7 @@
                               </Button>
                               <ChoiceBox fx:id="cbBusquedaEmpleadosA" layoutX="1404.0" layoutY="197.0" prefHeight="30.0" prefWidth="179.0" />
                               <TextField fx:id="edBuscar" layoutX="921.0" layoutY="197.0" prefHeight="31.0" prefWidth="285.0" />
-                              <Button fx:id="btnBuscar" layoutX="1206.0" layoutY="197.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #000000;">
+                              <Button fx:id="btnBuscar" layoutX="1206.0" layoutY="197.0" mnemonicParsing="false" onAction="#buscarDatosTablaEmpleados" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #000000;">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
@@ -266,10 +266,16 @@
                               <Line endX="559.0" layoutX="1022.0" layoutY="529.0" startX="-100.0" />
                               <TableView fx:id="vistaEmpleadoAnadido" layoutX="921.0" layoutY="554.0" prefHeight="115.0" prefWidth="662.0">
                                  <columns>
-                                    <TableColumn prefWidth="214.0" text="A" />
-                                    <TableColumn minWidth="0.0" prefWidth="236.0" text="B" />
-                                    <TableColumn prefWidth="210.0" text="C" />
+                                    <TableColumn fx:id="colDNIEmpleadoA1" prefWidth="110.0" text="DNI" />
+                                    <TableColumn fx:id="colNombreEmpleadoA1" minWidth="0.0" prefWidth="110.0" text="Nombre" />
+                                    <TableColumn fx:id="colApellidosEmpleadoA1" prefWidth="110.0" text="Apellidos" />
+                                    <TableColumn fx:id="colRolEmpleadoA1" prefWidth="110.0" text="Rol" />
+                                    <TableColumn fx:id="colCorreoEmpleadoA1" prefWidth="112.66650390625" text="Correo" />
+                                    <TableColumn fx:id="colTelefonoEmpleadoA1" prefWidth="108.0" text="Teléfono" />
                                  </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
                               </TableView>
                               <Label layoutX="459.0" layoutY="254.0" text="Teléfono:">
                                  <font>
@@ -295,9 +301,21 @@
                               </Label>
                               <PasswordField fx:id="edContrasenaA" layoutX="136.0" layoutY="531.0" prefHeight="30.0" prefWidth="600.0" promptText="·········" />
                               <TextField fx:id="edCorreoA" layoutX="136.0" layoutY="447.0" prefHeight="30.0" prefWidth="600.0" promptText="example@autoluxe.com" />
+                              <Button layoutX="1333.0" layoutY="194.0" mnemonicParsing="false" onAction="#actualizarTablas" prefHeight="17.0" prefWidth="47.0" style="-fx-background-color: transparent;">
+                                 <font>
+                                    <Font name="Microsoft Sans Serif" size="14.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fx:id="btnActualizar" fitHeight="27.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../imagenes/actualizar.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
                            </children>
                         </Pane>
-                        <Pane fx:id="panelCuerpo1" prefHeight="880.0" prefWidth="1620.0" stylesheets="@../../../style/estilo_app.css" visible="false">
+                        <Pane fx:id="panelCuerpo1" prefHeight="880.0" prefWidth="1620.0" stylesheets="@../../../style/estilo_app.css">
                            <children>
                               <ImageView fitHeight="554.0" fitWidth="753.0" layoutX="139.0" layoutY="107.0" opacity="0.1" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -334,21 +352,14 @@
                                     <Font name="Microsoft New Tai Lue Bold" size="48.0" />
                                  </font>
                               </Label>
-                              <TableView layoutX="922.0" layoutY="236.0" prefHeight="491.0" prefWidth="662.0">
-                                 <columns>
-                                    <TableColumn prefWidth="214.0" text="A" />
-                                    <TableColumn minWidth="0.0" prefWidth="236.0" text="B" />
-                                    <TableColumn prefWidth="210.0" text="C" />
-                                 </columns>
-                              </TableView>
-                              <Button fx:id="acBorrar" layoutX="149.0" layoutY="678.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="280.0" text="DAR DE BAJA">
+                              <Button fx:id="acBorrar" disable="true" layoutX="149.0" layoutY="678.0" mnemonicParsing="false" onAction="#borrarEmpleado" prefHeight="44.0" prefWidth="280.0" text="DAR DE BAJA">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                  </font>
                               </Button>
-                              <ChoiceBox layoutX="1405.0" layoutY="190.0" prefHeight="30.0" prefWidth="179.0" />
-                              <TextField layoutX="922.0" layoutY="190.0" prefHeight="31.0" prefWidth="285.0" />
-                              <Button fx:id="btnBuscar11" layoutX="1207.0" layoutY="190.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #000000;">
+                              <ChoiceBox fx:id="cbBusquedaEmpleadosA1" layoutX="1405.0" layoutY="190.0" prefHeight="30.0" prefWidth="179.0" />
+                              <TextField fx:id="edBuscar2" layoutX="922.0" layoutY="190.0" prefHeight="31.0" prefWidth="285.0" />
+                              <Button fx:id="btnBuscar2" layoutX="1207.0" layoutY="190.0" mnemonicParsing="false" onAction="#buscarDatosTablaEmpleados2" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #000000;">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
@@ -360,7 +371,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button fx:id="acEditar" layoutX="469.0" layoutY="678.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="280.0" text="EDITAR">
+                              <Button fx:id="acEditar" disable="true" layoutX="469.0" layoutY="678.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="280.0" text="EDITAR">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                  </font>
@@ -386,16 +397,16 @@
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="469.0" layoutY="283.0" prefHeight="30.0" prefWidth="280.0" />
-                              <TextField layoutX="148.0" layoutY="367.0" prefHeight="30.0" prefWidth="280.0" />
-                              <TextField layoutX="148.0" layoutY="283.0" prefHeight="30.0" prefWidth="280.0" />
+                              <TextField fx:id="edApellidosA1" disable="true" layoutX="469.0" layoutY="283.0" prefHeight="30.0" prefWidth="280.0" />
+                              <TextField fx:id="edDNIA1" disable="true" layoutX="148.0" layoutY="367.0" prefHeight="30.0" prefWidth="280.0" promptText="dni(9 caracteres)" />
+                              <TextField fx:id="edNombreA1" disable="true" layoutX="148.0" layoutY="283.0" prefHeight="30.0" prefWidth="280.0" />
                               <Label layoutX="471.0" layoutY="334.0" text="Teléfono:">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="469.0" layoutY="366.0" prefHeight="30.0" prefWidth="280.0" />
-                              <ChoiceBox layoutX="148.0" layoutY="449.0" prefHeight="30.0" prefWidth="179.0" />
+                              <TextField fx:id="edTlfnoA1" disable="true" layoutX="469.0" layoutY="366.0" prefHeight="30.0" prefWidth="280.0" promptText="máximo 12 caracteres" />
+                              <ChoiceBox fx:id="choiceBoxA1" disable="true" layoutX="148.0" layoutY="449.0" prefHeight="30.0" prefWidth="179.0" />
                               <Label layoutX="150.0" layoutY="416.0" text="Rol:">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
@@ -411,15 +422,14 @@
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="148.0" layoutY="611.0" prefHeight="30.0" prefWidth="600.0" />
-                              <TextField layoutX="148.0" layoutY="527.0" prefHeight="30.0" prefWidth="600.0" />
+                              <TextField fx:id="edCorreoA1" disable="true" layoutX="148.0" layoutY="527.0" prefHeight="30.0" prefWidth="600.0" promptText="example@autoluxe.com" />
                               <Label layoutX="149.0" layoutY="183.0" text="Buscar empleado[DNI]:">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="148.0" layoutY="209.0" prefHeight="30.0" prefWidth="200.0" />
-                              <Button fx:id="btnBuscar111" layoutX="348.0" layoutY="208.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="80.0" style="-fx-background-color: #000000;">
+                              <TextField fx:id="edBuscar1" layoutX="148.0" layoutY="209.0" prefHeight="30.0" prefWidth="200.0" />
+                              <Button fx:id="btnBuscar1" layoutX="348.0" layoutY="208.0" mnemonicParsing="false" onAction="#buscarEmpleado" prefHeight="31.0" prefWidth="80.0" style="-fx-background-color: #000000;">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
@@ -431,6 +441,32 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
+                              <Button fx:id="btnActualizar1" layoutX="1333.0" layoutY="187.0" mnemonicParsing="false" onAction="#actualizarTablas" prefHeight="17.0" prefWidth="47.0" style="-fx-background-color: transparent;">
+                                 <font>
+                                    <Font name="Microsoft Sans Serif" size="14.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fx:id="btnActualizar1" fitHeight="27.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../imagenes/actualizar.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <TableView fx:id="vistaEmpleadosA2" layoutX="921.0" layoutY="244.0" prefHeight="480.0" prefWidth="662.0">
+                                 <columns>
+                                    <TableColumn fx:id="colDNIEmpleadoA2" prefWidth="110.0" text="DNI" />
+                                    <TableColumn fx:id="colNombreEmpleadoA2" minWidth="0.0" prefWidth="110.0" text="Nombre" />
+                                    <TableColumn fx:id="colApellidosEmpleadoA2" prefWidth="110.0" text="Apellidos" />
+                                    <TableColumn fx:id="colRolEmpleadoA2" prefWidth="110.0" text="Rol" />
+                                    <TableColumn fx:id="colCorreoEmpleadoA2" prefWidth="112.66650390625" text="Correo" />
+                                    <TableColumn fx:id="colTelefonoEmpleadoA2" prefWidth="108.0" text="Teléfono" />
+                                 </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                              <PasswordField fx:id="edContrasenaA1" disable="true" layoutX="148.0" layoutY="606.0" prefHeight="30.0" prefWidth="600.0" promptText="·········" />
                            </children>
                         </Pane>
                      </children>
